--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@
 	--main-5: #3882f6;
 }
 
+/* Main Body Styling */
 body {
 	font-family: 'Roboto', Arial, Helvetica, sans-serif;
-    margin: 0;
+	margin: 0;
 	font-size: 16px;
 }
 
@@ -25,41 +26,112 @@ a {
 	text-decoration: none;
 	color: #e5e5e5;
 }
+.container {
+	max-width: 900px;
+	margin: 0 auto;
+}
 
 .row {
 	display: flex;
+	justify-content: space-between;
 }
 
+.col{
+	padding: 1em 0;
+}
+
+/* Navbar styling */
 .header-footer {
 	background-color: #1f2937;
 	padding: 1em;
 }
-.navbar {
-	display: flex;
-	text-decoration: none;
-	list-style: none;
+
+.header-footer p {
+	margin: 0 auto;
+	max-width: fit-content;
+	color: #e5e5e5;
+	font-size: 0.8rem;
+	padding: 1em;
 }
 
+.nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-grow: 1;
+}
+
+.nav__list {
+	padding: 0;
+	list-style: none;
+	text-decoration: none;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.nav__list-secondary {
+	margin-left: 50px;
+}
+.logo {
+	font-size: 1.5rem;
+	font-weight: 700;
+	color: var(--main-2);
+	margin-right: 1em;
+}
+
+.nav__item + .nav__item {
+	margin-left: 1em;
+}
+
+/* Hero Section */
 .hero {
 	background-color: #1f2937;
-	padding: 3em;
+	padding: 10em;
 }
-.hero__text{
+.hero__text {
 	border: 2px solid white;
-	color: #e5e5e5;
+	width: 70%;
+	margin-right: 6%;
 }
-.hero__img{
-	height: 200px;
-	width: 400px;
+
+.hero__main-text {
+	color: var(--main-2);
+	font-size: 3rem;
+	font-weight: 900;
+	margin: 0;
+}
+
+.hero__secondary-text {
+	font-size: 1.125rem;
+	color: var(--main-3);
+	line-height: 1.5rem;
+	margin: 0;
+	padding: 1em 0 1em 0 ;
+}
+
+.hero__button {
+	background-color: var(--main-5);
+	padding: 0.5em 2.5em;
+	border-radius: 10px;
+	font-size: 1.125rem;
+	font-weight: 700;
+}
+
+.hero__img {
+	width: 70%;
 	background-color: #696969;
 	color: #e5e7eb;
+	padding: 5.5rem 0;
+	text-align: center;
+	align-items: center;
 }
 
 .hero-2 {
 	padding: 3em;
 }
 
-.img{
+.img {
 	border: 3px solid blue;
 	height: 200px;
 	width: 200px;
@@ -73,7 +145,7 @@ a {
 	padding: 3em;
 }
 
-.accent{
+.accent {
 	padding: 3em;
 	background-color: #3882f6;
 }
