--- a/style.css
+++ b/style.css
@@ -36,10 +36,13 @@ a {
 	justify-content: space-between;
 }
 
-.col{
+.col {
 	padding: 1em 0;
 }
 
+.col + .col {
+	margin-left: 1.5em;
+}
 /* Navbar styling */
 .header-footer {
 	background-color: #1f2937;
@@ -90,9 +93,8 @@ a {
 	padding: 10em;
 }
 .hero__text {
-	border: 2px solid white;
-	width: 70%;
-	margin-right: 6%;
+	/* border: 2px solid white; */
+	width: 100%;
 }
 
 .hero__main-text {
@@ -100,6 +102,7 @@ a {
 	font-size: 3rem;
 	font-weight: 900;
 	margin: 0;
+	width: 80%;
 }
 
 .hero__secondary-text {
@@ -107,7 +110,8 @@ a {
 	color: var(--main-3);
 	line-height: 1.5rem;
 	margin: 0;
-	padding: 1em 0 1em 0 ;
+	padding: 1em 0 1em 0;
+	width: 95%;
 }
 
 .hero__button {
@@ -119,33 +123,109 @@ a {
 }
 
 .hero__img {
-	width: 70%;
+	width: 90%;
 	background-color: #696969;
 	color: #e5e7eb;
-	padding: 5.5rem 0;
+	position: relative;
+	/* padding: 5.5rem 0; */
 	text-align: center;
 	align-items: center;
+}
+
+.img__title {
+	position: absolute;
+	top: 40%;
+	left: 20%;
 }
 
 .hero-2 {
 	padding: 3em;
 }
 
+.container__info {
+	max-width: 90%;
+	margin: 0 auto;
+}
+
+.hero-2__title {
+	font-size: 2.25rem;
+	text-align: center;
+}
+
+.container__img {
+	max-width: 100%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	text-align: center;
+	font-size: 1.25rem;
+}
+
 .img {
-	border: 3px solid blue;
-	height: 200px;
-	width: 200px;
+	border: 5px solid blue;
+	border-radius: 20px;
+	height: 180px;
+	width: 100%;
 }
 
 .hero-3 {
 	background-color: #e5e5e5;
-	padding: 3em;
+	padding: 7em;
 }
+
+.accent__quote {
+	max-width: 90%;
+	margin: 0 auto;
+	font-size: 2.3rem;
+	font-weight: 300;
+	font-style: italic;
+}
+
+.accent__sign {
+	float: right;
+	padding-right: 5em;
+	margin-top: 0;
+	font-weight: 700;
+	font-size: 1.25rem;
+}
+
 .hero-4 {
-	padding: 3em;
+	padding: 5em;
 }
 
 .accent {
-	padding: 3em;
 	background-color: #3882f6;
+	color: var(--main-2);
+	width: 90%;
+	padding: 2em 7em;
+	border-radius: 10px;
+}
+
+.accent__container {
+	width: 80%;
+	text-align: justify;
+}
+
+.accent__title {
+	margin: 0;
+	text-align: justify;
+	font-size: 1.25rem;
+}
+.hero-4__text {
+	margin: 0;
+}
+.accent__button {
+	width: 30%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0;
+}
+
+.btn {
+	border: 3px solid white;
+	border-radius: 10px;
+	padding: 0.4em 2em;
+	font-size: 1.2rem;
+	font-weight: 700;
 }
